fixed contrast

--- a/src/Assets/styles/Home.css
+++ b/src/Assets/styles/Home.css
@@ -60,7 +60,6 @@
 	mask-size: cover;*/
 	border-radius: 50%;
 	aspect-ratio: 1 / 1;
-	filter: contrast(0.76);
 	box-shadow: 0 0.25rem 0.5rem 0.25rem #1112;
 }
 
